add_subdirectory(bubble_sort)
add_subdirectory(selection_sort)
add_subdirectory(insertion_sort)
add_subdirectory(shell_sort)
add_subdirectory(merge_sort)
add_subdirectory(quick_sort)
add_subdirectory(heap_sort)
add_subdirectory(counting_sort)
add_subdirectory(bucket_sort)
add_subdirectory(radix_sort)
